feat: add institutional-grade backtesting metrics and professional reporting
- Create InstitutionalBacktestMetrics.java class with 25+ advanced metrics
- Basic metrics: total return, annualized return, win rate, profit factor, expectancy
- Risk metrics: Sharpe ratio, Sortino ratio, Calmar ratio, Recovery Factor
- Drawdown analysis: Max drawdown, avg drawdown, drawdown recovery periods
- Advanced risk metrics: VaR (Value at Risk), CVaR (Conditional VaR)
- Trade quality metrics: Consecutive wins/losses, profit standard deviation
- Statistical metrics: Skewness, Kurtosis for return distribution analysis
- getSummary() returns formatted institutional report with ASCII borders
- getConfidenceScore() returns 0-100 strategy validation score
- Professional metrics calculation with proper NaN/Infinity handling
- Create BacktestReportPanel.java for visual display of institutional metrics
  - Color-coded metric indicators (green/good, red/poor)
  - Tabbed interface: Standard View and Professional Report
  - Performance section: Initial/final balance, total return, annualized return
  - Trade statistics: Wins, losses, profit factor, expectancy
  - Risk metrics: Drawdown, Sharpe, Sortino, Calmar, Recovery Factor
  - Advanced metrics: Consecutive streaks, skewness, kurtosis, VaR, CVaR
  - Confidence score visualization with progress bar and interpretation
  - ASCII-formatted text summary for detailed analysis
- Update BacktestingPanel to integrate institutional metrics
  - Replace calculateMetrics() with calculateInstitutionalMetrics()
  - Add currentMetrics field to store InstitutionalBacktestMetrics instance
  - Update updateMetrics() to work with institutional metrics
  - Create tabbed results view: Standard View and Professional Report
  - Display advanced metrics including Sharpe, Sortino, Calmar, Recovery Factor
  - Leverage new BacktestReportPanel for comprehensive analysis display
- Full institutional-grade backtesting analysis comparable to professional platforms